<resources>
    <string name="app_name">DeckBuilder</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="signup_username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup_user">SIGN UP</string>
    <string name="login_user">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="signout">SIGN OUT</string>

    <string name="title_activity_signup">SignupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="library">Your Library</string>
    <string name="arsenal">Arsenal</string>
    <string name="explore">Explore</string>
    <string name="my_buddies">My buddies</string>
    <string name="create">Create</string>
    <string name="share">Share</string>
    <string name="add_buddy">Add buddy</string>
    <string name="my_buddy">Details</string>
    <string name="buddy_details">Buddy details</string>


    <string name="deckNameInput">Name your deck</string>

    <string name="new_deck">New Deck</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="build">Build</string>
    <string name="build_deck">DECK BUILDER</string>
    <string name="monster">All cards</string>
    <string name="extra_monster">Extra monster cards</string>
    <string name="trap_spell">Trap and spell cards</string>

    <string name="buddy">BUDDY</string>
    <string name="profile">Profile</string>
    <string name="decks">Decks</string>
    <string name="all_cards">ALL CARDS</string>

    <string name="categories">Categories:</string>
    <string name="add_chosen">ADD CHOSEN</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_card">AddCardActivity</string>
</resources>